--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,7 @@
       <span class="block mb4">AMP by Example gives a hands-on introduction to Accelerated Mobile Pages based on code and live samples. Learn how to create web pages with AMP and and how to effectively use AMP components.</span>
       <div class="www-index-header-action mx-auto mb4">
         <button class="ampstart-btn ampstart-btn-secondary caps mb3 mx2">Examples</button>
-        <button href="/playground" class="ampstart-btn ampstart-btn-secondary caps mb3 mx2">
+        <button class="ampstart-btn ampstart-btn-secondary caps mb3 mx2">
           <a href="/playground" >Playground</a>
         </button>
 
